######################################################################################################
# Append Midi Port Examples

	if(${MCC_COMPILE_UART_MIDI_IN})
		add_subdirectory(InputPort)
	endif()
#
######################################################################################################