# Initialize HEADER_LIST as an empty string list
set( HEADERS_LIST "" )

# Append Headers
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/ScaleDefinitions.h")

list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Algerian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Arabic.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Byzantine.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Chinese.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Chromatic.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Diminished.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Dorian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Egyptian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/EigthToneSpanish.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Enigmatic.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Ethiopian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/HarmonicMajor.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/HarmoincMinor.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Hindu.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Hirajoshi.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/HungarianMinor.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Japanese.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Locrian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Lydian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Major.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/MajorBlues.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/MajorPentatonic.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Minor.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/MinorBlues.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/MinorPentatonic.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Mixolydian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Oriental.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Pelog.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/Phrygian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/RomanianMinor.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/SpanishGypsy.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/SuperLocrian.Scale")
list( APPEND HEADERS_LIST "${CMAKE_CURRENT_LIST_DIR}/WholeTone.Scale")

# MCC install process
if(INSTALL STREQUAL "ON")

	install(
		FILES ${HEADERS_LIST} 
		DESTINATION ${CMAKE_INSTALL_PREFIX}/include/MCC/Core/MusicalCore/MusicalScale/Flash/ScaleDefinitions
	)

endif()
